unpackaged/main/default/objects/Merged_Template_File_Meta__c/Merged_Template_File_Meta__c.object-meta.xml
<CustomObject>
    <label>Merged Template File Meta</label>
    <nameField>
        <displayFormat>Meta-{0000}</displayFormat>
        <label>Merged Template File Meta Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merged Template File Meta</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>