unpackaged/main/default/objects/Merged_Template_File_Meta__c/fields/File_Type__c.field-meta.xml
<CustomField>
    <fullName>File_Type__c</fullName>
    <label>File Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>retainer</fullName>
            </value>
            <value>
                <fullName>hipaa</fullName>
            </value>
            <value>
                <fullName>hitech</fullName>
            </value>
            <value>
                <fullName>secondary</fullName>
            </value>
            <value>
                <fullName>other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>