unpackaged/main/default/objects/Merged_Template_File_Meta__c/fields/Merge_Template__c.field-meta.xml
<CustomField>
    <fullName>Merge_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Merge Template</label>
    <referenceTo>litify_docs__Template__c</referenceTo>
    <relationshipLabel>Merged Template File Meta</relationshipLabel>
    <relationshipName>Merged_Template_File_Meta</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>