unpackaged/main/default/objects/Merged_Template_File_Meta__c/fields/Page_Range__c.field-meta.xml
<CustomField>
    <fullName>Page_Range__c</fullName>
    <description>The range field should define the page range of the document being defined. Page ranges can be defined with a mixture of comma separated lists of page numbers and/or ranges using hyphens (ex: 1,2,5-8).</description>
    <inlineHelpText>The range field should define the page range of the document being defined. Page ranges can be defined with a mixture of comma separated lists of page numbers and/or ranges using hyphens (ex: 1,2,5-8).</inlineHelpText>
    <label>Page Range</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>